Workaround pyroma return code

--- a/tox.ini
+++ b/tox.ini
@@ -13,4 +13,5 @@ commands =
     coverage report --show-missing
     coverage html --directory {envdir}/coverage
 
-    pyroma .
+    sh -c "pyroma . || (( $? == 10 ))"
+whitelist_externals = sh
