Be explicit about using pyroma from the venv

--- a/tox.ini
+++ b/tox.ini
@@ -13,5 +13,5 @@ commands =
     coverage report --show-missing
     coverage html --directory {envdir}/coverage
 
-    sh -c "pyroma . || (( $? == 10 ))"
+    sh -c "{envdir}/bin/pyroma . || (( $? == 10 ))"
 whitelist_externals = sh
