Maybe travis likes heredoc syntax

--- a/tox.ini
+++ b/tox.ini
@@ -13,5 +13,5 @@ commands =
     coverage report --show-missing
     coverage html --directory {envdir}/coverage
 
-    sh -c "{envdir}/bin/pyroma . || (( $? == 10 ))"
+    sh -c <<EOT {envbindir}/pyroma . || (( $? == 10 )) EOT
 whitelist_externals = sh
